@@ -83,7 +83,7 @@ WIFI_LOG_SERVER=192.168.2.2;
 WIFI_LOG_PORT=8000;
 
 [DIRECTORIES]
-LOCALFILES="ms0:/PSP/MUSIC";
+LOCALFILES="ms0:/MUSIC";
 
 [SHOUTCAST]
 ;DB_REQUEST_STRING="http://www.shoutcast.com/sbin/xmllister.phtml?service=pspradio";
